Add DuckLake integration with PostgreSQL as metadata store and partitioned table support
- Added metadata configurations in `DuckDBConfig` for PostgreSQL.
- Updated `DuckDBService` to support PostgreSQL secret creation, catalog attachment, and partitioning setup.
- Introduced `DuckLakeJavaExample` with end-to-end example showcasing DuckLake functionality.
- Implemented `DucklakePostgresTest` for testing with Testcontainers.
- Adjusted `.gitignore` to include `data_files`.